# EEG-Artifact-Detection-DLCNN

./: .gitignore  LICENSE  README.md  binary_model_data_preparation.py  check_channels.py  check_edf.py  data_exploration.py  eeg_preprocessing_pipeline.py  evaluate_cnn_vs_rules.py  evaluate_rule_based.py  eye_movement_detector.py  eye_movement_window_optimization_results.json  inference_assets_manifest.json  muscle_artifact_detector.py  muscle_window_optimization_results.json  non_physiological_detector.py  nonphys_window_optimization_results.json  pyproject.toml  requirements.txt  rule_based_detectors.py  window_optimization_script.py
artifact_identification/: __init__.py  _version.py  data_preparation.py  exploration.py  losses.py  preprocessing.py
artifact_identification/detectors/: __init__.py  eye_movement.py  muscle.py  non_physiological.py  rule_based.py
artifact_identification/evaluation/: __init__.py  cnn_vs_rules.py  rule_based_eval.py
artifact_identification/utils/: __init__.py  check_channels.py  check_edf.py
binary_models_data/: robust_scaler.joblib
binary_models_data/eye_movement/: metadata.json
binary_models_data/muscle_artifacts/: metadata.json
binary_models_data/non_physiological/: metadata.json
checkpoints/eye_movement/: edl_cnn_eye_best_1778512419.weights.h5
checkpoints/muscle/: edl_cnn_muscle_best_1778512872.weights.h5
checkpoints/non_physiological/: edl_cnn_non_physiological_best_1778512937.weights.h5
results/: rule_based_eye_movement_results.json
results/edl_cnn_eye/: edl_cnn_eye.keras  edl_cnn_eye_history.json  edl_cnn_eye_thresholds.json
results/edl_cnn_muscle/: edl_cnn_muscle.keras  edl_cnn_muscle_history.json  edl_cnn_muscle_thresholds.json
results/edl_cnn_non_physiological/: edl_cnn_non_physiological.keras  edl_cnn_non_physiological_history.json  edl_cnn_non_physiological_thresholds.json
scripts/: __init__.py  evaluate_cnn_vs_rules.py  evaluate_rule_based.py  explore_data.py  prepare_data.py  preprocess.py  train_eye.py  train_muscle.py  train_nonphys.py  window_optimization.py
tests/: __init__.py  test_losses.py  test_rule_based.py
